<resources>
    <string name="app_name">Apartm8s</string>
    <string name="title_home">Calendar</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_todo">Todo List</string>

    <string name="welcome_message">Welcome to the App!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_todo_button">NEW TO-DO</string>
    <string name="save_todo_button">Save To Do</string>
    <string name="switch_label">Completed</string>
    <string name="due_date_label">Due Date: (click to change)</string>
    <string name="not_complete_toggle">Not Complete</string>
    <string name="complete_toggle">Complete</string>
    <string name="banner_title">Items Due Today:</string>

    <string name="new_user_confirm_title">Confirm</string>
    <string name="new_user_cancel_title">Cancel</string>

    <string name="settings_button_title">Settings</string>
    <string name="logout_button_title">Logout</string>

    <string name="user_email_label_title">Email: </string>
    <string name="user_apartment_label_title">Apartment Name: </string>
    <string name="change_apartment_button_title">Change Apartment Name</string>
    <string name="change_password_button_title">Change Password</string>
    <string name="settings_close_title">Close</string>

</resources>