<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_main_menu">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.room8.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.room8.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/activity_messaging" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.room8.ui.todolist.todomvp3.todolistactivity.ToDoListActivity"
        android:label="@string/title_todo"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_main_menu"
        android:name="com.example.room8.ui.mainMenu.MainMenuFragment"
        android:label="Dashboard"
        tools:layout="@layout/fragment_main_menu" />

    <fragment
        android:id="@id/navigation_expense"
        android:name="com.example.room8.ui.expenses.expenselistactivity.ExpenseListActivity"
        android:label="Expense List"
        tools:layout="@layout/fragment_expense_list" />
</navigation>